--- a/app/assets/stylesheets/components/_internship_net_salary.scss
+++ b/app/assets/stylesheets/components/_internship_net_salary.scss
@@ -1,102 +1,54 @@
-@media (min-width: 768px) {
-  .rating_net_salary_per_month {
+.rating_net_salary_per_month {
+  display: flex;
+  justify-content: space-around;
+  background: white;
+  border-radius: 6px;
+  border: solid 1px #e0e5ec;
+  overflow: hidden;
+  height: 70px;
+  .radio {
+    margin: 0;
+  }
+  span {
+    flex: 1 0 16%;
     display: flex;
-    justify-content: space-around;
-    background: white;
-    border-radius: 6px;
-    border: solid 1px #e0e5ec;
-    overflow: hidden;
-    height: 70px;
-    .radio {
-      margin: 0;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    .internship-net-salary-hover {
+      border: 2px solid #ffbd23;
+      color: #ffbd23;
     }
-    span {
-      flex: 1 0 16%;
+    label {
+      text-align: center;
+      color: #8b8c8f;
+      padding: 16px;
+      height: 100%;
+      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100%;
-      .internship-net-salary-hover {
+      border: 2px solid white;
+      font-weight: 400;
+      transition: all 200ms ease;
+      &:hover {
         border: 2px solid #ffbd23;
         color: #ffbd23;
       }
-      label {
-        text-align: center;
-        color: #8b8c8f;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 2px solid white;
-        font-weight: 400;
-        transition: all 200ms ease;
-        &:hover {
-          border: 2px solid #ffbd23;
-          color: #ffbd23;
-        }
-        input {
-          display: none;
-        }
-      }
-      &:first-child {
-        border-top-left-radius: 6px;
-        border-bottom-left-radius: 6px;
-      }
-      &:last-child {
-        border-top-right-radius: 6px;
-        border-bottom-right-radius: 6px;
-      }
-      &:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6) {
-        border-left: 2px solid #e0e5ec;
+      input {
+        display: none;
       }
     }
-  }
-}
-
-@media (max-width: 768px) {
-  .net-salary-container {
-    a {
-      &:hover {
-        background-color: transparent;
-      }
+    &:first-child label {
+      border-top-left-radius: 6px;
+      border-bottom-left-radius: 6px;
     }
-  }
-  .internship-net-salary-hover {
-    color: #ffbd23;
-  }
-
-  .rating_net_salary_per_month {
-    background-color: white;
-    width: 300px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: flex-start;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border: solid 1px #e0e5ec;
-    color: #8b8c8f;
-    transition: color 200ms ease;
-    .radio {
-      width: 100%;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
-      label {
-        padding-top: 10px;
-        width: 100%;
-        height: 100%;
-        input {
-          display: none;
-        }
-      }
-      &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6) {
-        border-top: solid 1px #e0e5ec;
-      }
+    &:last-child label {
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
+    }
+    &:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6) {
+      border-left: 2px solid #e0e5ec;
     }
   }
 }
