--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,7 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700");
-
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Open Sans", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700");
 
 $base-size: 16px;
 $base-height: 1.4;
@@ -10,8 +7,6 @@ $brand-color: #D23333;
 $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
-$orange: #ffbd23;
+$orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
-
-
