--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,139 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
-  <%= render partial: "shared/navbar" %>
-  <%= render partial: "shared/flashes" %>
+  <div id="top-header">
+    <div class="container">
+      <a style="display:inline-block;" href="mailto:community@internsgopro.com">
+        <i class="fa fa-envelope"></i> <span>community@internsgopro.com</span>
+      </a>
+
+      <a target="_blank" class="social facebook" href="http://www.facebook.com/internsgopro">
+        <i class="fa fa-facebook"></i>
+      </a>
+
+      <a target="_blank" class="social twitter" href="http://www.twitter.com/internsgopro">
+        <i class="fa fa-twitter"></i>
+      </a>
+
+      <% unless user_signed_in? %><div class="signed-in">
+      <li class="<%= "active" if current_page?("/users/sign_up") %> ">
+        <%= link_to "Sign up", new_user_registration_path %>
+      </li>
+      <li class="<%= "active" if current_page?("/users/sign_in") %>">
+        <%= link_to "Sign in", new_user_session_path %>
+      </li></div>
+      <% end %>
+
+
+      <% if user_signed_in? %><div class="signed-in">
+      Signed in as <%= current_user.email %>
+      <li><%= link_to "Sign out", destroy_user_session_path,
+        method: :delete %>
+      </li> </div>
+
+      <% end %>
+
+    </div>
+
+  </div>
+
+
+  <div class="container">
+    <% flash.each do |key, message| %>
+    <div><%= message %></div>
+    <% end %>
+
+
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="http://www.internsgopro.com">
+            <img id="navbar-logo" class="img-responsive" src="/logo.png" alt="internsgopro logo">
+          </a>
+          <button type="button" class="navbar-toggle collapsed"
+          data-toggle="collapse" data-target="#collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+      </div>
+
+
+      <div class="collapse navbar-collapse" id="collapse" style="position: relative; left: 255px;">
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Find Internships", offers_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Best Employers", employers_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Internship Reviews", new_rating_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Get the label", pages_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "About us", reviews_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="/fr/employers/filters/all/all/all/all/all/label/desc/page">
+              <img alt="Français" title="Français" src="/french.png">
+            </a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+
+
   <%= yield %>
-  <%= render partial: "shared/footer" %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+</div>
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-9">
+        <p>
+          <br><strong>InternsGoPro</strong> © 2014 - 2017 | All rights reserved. <a href="/pdf/internsgopro_terms-of-use.pdf">Terms of use (pdf)</a><br>
+          Support and contact: <a href="mailto:community@internsgopro.com">community@internsgopro.com</a>
+        </p>
+      </div>
+      <div class="col-xs-3">
+        <div id="author">
+          <p class="footer">
+            <a href="http://www.internsgopro.com" target="_blank">Web application by InternsGoPro</a>
+            <a href="http://www.internsgopro.com" target="_blank"><br><img src="/logo.png" height="42" width="250"></a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
